Fix overflow

--- a/src/style.css
+++ b/src/style.css
@@ -61,10 +61,6 @@
   overflow: visible !important;
 }
 
-[class*="AnchoredReviewBody-"] {
-  overflow: visible !important;
-}
-
 [class*="prc-Overlay-Overlay"] {
   overflow: visible !important;
 }
